--- a/src/style.css
+++ b/src/style.css
@@ -109,3 +109,22 @@ hr{
     background-color: #46c9cb;
     box-shadow: 0 0 10px #48fcff;
 }
+
+
+.container-barra-de-vida{
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100% - 16px);
+    max-width: 600px;
+    height: 4px;
+    background-color: rgb(75, 75, 75);
+}
+
+.barra-de-vida{
+    width: 100%;
+    height: 100%;
+    background-color: #48fcff;
+    transition: all 1s;
+}
