--- a/src/style.css
+++ b/src/style.css
@@ -143,6 +143,7 @@ hr{
     background-color: rgba(255, 0, 0, 0.297);
     position: absolute;
     bottom: 50px;
+    display: none;
 }
 
 .controles .btn{
@@ -151,6 +152,9 @@ hr{
     position: absolute;
     background-color: transparent;
     border: 2px solid #48fcff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .btn.esquerda{
