--- a/src/style.css
+++ b/src/style.css
@@ -162,18 +162,30 @@ hr{
 .btn.esquerda{
     bottom: 10px;
     left: 20px;
+    background-image: url(../src/img/seta-d.svg);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .btn.direita{
     bottom: 10px;
     left: 120px;
+    background-image: url(../src/img/seta-e.svg);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .btn.atirar{
     bottom: 10px;
     right:  20px;
+    background-image: url(../src/img/seta-cima.svg);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .btn.acelerar{
     bottom: 110px;
     right:  20px;
+    background-image: url(../src/img/btn-tiro.svg);
+    background-position: center;
+    background-repeat: no-repeat;
 }
